# libmctp

./: CMakeLists.txt  alloc.c  core.c  crc32c.c  crc32c.h  libmctp-alloc.h  libmctp-serial.h  libmctp-smbus.h  libmctp.h  nvme-mi.h  serial.c  smbus.c
tests/: mctp-in.c  mctp-pipe.c  mctp-smbus.c
